# challenge-python-inceptia

./: ejercicio1.py  ejercicio2.py  ejercicio3.py  pyproject.toml
