[tool.poetry]
name = "inceptia-bot"
version = "0.1.0"
description = ""
authors = ["FacuD <facundodocampo1@gmail.com>"]
readme = "README.md"
packages = [{include = "inceptia_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.8"
requests = "^2.31.0"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
